--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 # Name of your site (displayed in the header)
 name: Ravinder Payal
-
+email: mail@ravinderpayal.com
 # Short bio or description (displayed in the header)
 description: Web Developer from Haryana, India
 
