--- a/_config.yml
+++ b/_config.yml
@@ -19,15 +19,15 @@ avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/je
 footer-links:
   dribbble:
   email:
-  facebook:
+  facebook: payal.ravinder
   flickr:
-  github: barryclark/jekyll-now
+  github: ravinderpayal
   instagram:
   linkedin:
   pinterest:
-  rss: # just type anything here for a working RSS icon
-  twitter: jekyllrb
-  stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
+  rss: ravinderpayal.com
+  twitter: ravinderpayal
+  stackoverflow: users/2988776/ravinder-payal
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
 
