--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,4 +1,4 @@
 ravinder_payal:
     name: Ravinder Payal
     email: mail@ravinderpayal.com
-    web: /authors/ravinderpayal
+    profile: /authors/ravinderpayal
