--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ email: mail@ravinderpayal.com
 description: Web Developer from Haryana, India
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: /media/logo-ravinderpayal.web.png
 
 #
 # Flags below are optional
