--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Ravinder Payal
 email: mail@ravinderpayal.com
 # Short bio or description (displayed in the header)
-description: Web Developer from Haryana, India
+description: On a journey to understand computers :)
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: /images/logo-ravinderpayal.web.png
